welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:37: error: not found: value aavnce
  aavnce()
  ^